// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runServer should authenticate users 1`] = `
{
  "data": {
    "error": "bad_handler",
    "error_debug_data": {
      "guruMeditation": "1",
    },
    "error_description": "No endpoint found at that path ("get", "/v4/diag")",
    "error_help_uri": "https://stackoverflow.com/questions/ask?tags=whook&title=How+to+debug+E_NOT_FOUND+whook+error+code",
    "error_uri": "https://stackoverflow.com/search?q=%5Bwhook%5D+E_NOT_FOUND",
  },
  "debugCalls": [
    [
      "⏳ - Cleared a delay",
    ],
    [
      "⏳ - Created a delay:",
      30000,
    ],
    [
      "❌ - No handler found for: ",
      "get",
      [
        "v4",
        "diag",
      ],
    ],
  ],
  "headers": {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "cache-control": "private",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "1",
    "transfer-encoding": "chunked",
    "vary": "origin",
  },
  "logErrorCalls": [],
  "logInfoCalls": [
    [
      "CALL {"id":"1","protocol":"http","ip":"_ip_","startInBytes":416,"startOutBytes":0,"startTime":1390694400000,"url":"/v4/diag","method":"GET","reqHeaders":{"accept":"application/json, text/plain, */*","authorization":"Bearer eyJhbGciOiJIUzI1NiJ9.eyJzY29wZSI6ImFkbWluIiwidXNlcklkIjoiMSIsImFwcGxpY2F0aW9uSWQiOiIxIiwiaWF0IjoxMzkwNjk0NDAwLCJleHAiOjEzOTA4NjcyMDAsIm5iZiI6MTM5MDY5NDQwMH0.cFAZ3Bsah35MrPbbOvTBv20Lr9tHiar9QBwBkDqVxZ0","user-agent":"__avoid_axios_version__","accept-encoding":"gzip, compress, deflate, br","host":"localhost:9999","connection":"close"},"errored":true,"endTime":1390694400000,"endInBytes":416,"endOutBytes":780,"statusCode":404,"resHeaders":{"content-type":"application/json","access-control-allow-origin":"*","access-control-allow-methods":"GET,POST,PUT,DELETE,OPTIONS","access-control-allow-headers":"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent","vary":"origin","cache-control":"private"},"operationId":"none"}",
    ],
    [
      "ERROR {"guruMeditation":"1","request":"http://localhost:9999/v4/diag","verb":"GET","status":404,"code":"E_NOT_FOUND","stack":"YHTTPError[404]: E_NOT_FOUND (get, v4,diag, /home/whoiam/projects/whook/packages/whook-http-transaction/src/index.ts:364:46\\n    at processTicksAndRejections (node:internal/process/task_queues:x:x)","details":["get",["v4","diag"],"/v4/diag"]}",
    ],
  ],
  "status": 404,
}
`;

exports[`runServer should fail with bad fake tokens 1`] = `
{
  "data": {
    "error": "bad_handler",
    "error_debug_data": {
      "guruMeditation": "2",
    },
    "error_description": "No endpoint found at that path ("get", "/v4/diag")",
    "error_help_uri": "https://stackoverflow.com/questions/ask?tags=whook&title=How+to+debug+E_NOT_FOUND+whook+error+code",
    "error_uri": "https://stackoverflow.com/search?q=%5Bwhook%5D+E_NOT_FOUND",
  },
  "debugCalls": [
    [
      "⏳ - Cleared a delay",
    ],
    [
      "⏳ - Created a delay:",
      30000,
    ],
    [
      "❌ - No handler found for: ",
      "get",
      [
        "v4",
        "diag",
      ],
    ],
  ],
  "headers": {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "cache-control": "private",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "2",
    "transfer-encoding": "chunked",
    "vary": "origin",
  },
  "logErrorCalls": [],
  "logInfoCalls": [
    [
      "CALL {"id":"2","protocol":"http","ip":"_ip_","startInBytes":221,"startOutBytes":0,"startTime":1390694400000,"url":"/v4/diag","method":"GET","reqHeaders":{"accept":"application/json, text/plain, */*","authorization":"Fake e-admin","user-agent":"__avoid_axios_version__","accept-encoding":"gzip, compress, deflate, br","host":"localhost:9999","connection":"close"},"errored":true,"endTime":1390694400000,"endInBytes":221,"endOutBytes":780,"statusCode":404,"resHeaders":{"content-type":"application/json","access-control-allow-origin":"*","access-control-allow-methods":"GET,POST,PUT,DELETE,OPTIONS","access-control-allow-headers":"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent","vary":"origin","cache-control":"private"},"operationId":"none"}",
    ],
    [
      "ERROR {"guruMeditation":"2","request":"http://localhost:9999/v4/diag","verb":"GET","status":404,"code":"E_NOT_FOUND","stack":"YHTTPError[404]: E_NOT_FOUND (get, v4,diag, /home/whoiam/projects/whook/packages/whook-http-transaction/src/index.ts:364:46\\n    at processTicksAndRejections (node:internal/process/task_queues:x:x)","details":["get",["v4","diag"],"/v4/diag"]}",
    ],
  ],
  "status": 404,
}
`;

exports[`runServer should ping 1`] = `
{
  "data": {
    "pong": "pong",
  },
  "debugCalls": [
    [
      "⏳ - Cleared a delay",
    ],
    [
      "⏳ - Created a delay:",
      30000,
    ],
    [
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
  ],
  "headers": {
    "access-control-allow-headers": "Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent",
    "access-control-allow-methods": "GET,POST,PUT,DELETE,OPTIONS",
    "access-control-allow-origin": "*",
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
    "vary": "origin",
    "x-node-env": "test",
  },
  "logErrorCalls": [],
  "logInfoCalls": [
    [
      "CALL {"id":"0","protocol":"http","ip":"_ip_","startInBytes":192,"startOutBytes":0,"startTime":1390694400000,"url":"/v4/ping","method":"GET","reqHeaders":{"accept":"application/json, text/plain, */*","user-agent":"__avoid_axios_version__","accept-encoding":"gzip, compress, deflate, br","host":"localhost:9999","connection":"close"},"errored":false,"endTime":1390694400000,"endInBytes":192,"endOutBytes":447,"statusCode":200,"resHeaders":{"content-type":"application/json","X-Node-ENV":"test","access-control-allow-origin":"*","access-control-allow-methods":"GET,POST,PUT,DELETE,OPTIONS","access-control-allow-headers":"Accept,Accept-Encoding,Accept-Language,Referrer,Content-Type,Content-Encoding,Authorization,Keep-Alive,User-Agent","vary":"origin"},"operationId":"getPing"}",
    ],
  ],
  "status": 200,
}
`;

exports[`runServer should work 1`] = `
{
  "debugCalls": [
    [
      "Error: ENOENT: no such file or directory, open '/home/whoami/projects/.env.app.local'",
    ],
    [
      "Error: ENOENT: no such file or directory, open '/home/whoami/projects/.env.node.test'",
    ],
    [
      "⌛ - Delay service initialized.",
    ],
    [
      "♻️ - Loading the environment service.",
    ],
    [
      "❤️ - Initializing the APM service.",
    ],
    [
      "➰ - Plugin "@whook/cors" resolved to "/home/whoiam/projects/whook/packages/whook-cors/dist".",
    ],
    [
      "➰ - Plugin "@whook/whook" resolved to "/home/whoiam/projects/whook/dist".",
    ],
    [
      "🈁 - Generating the API_DEFINITIONS",
    ],
    [
      "🈁 - Handler module at "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js" exports no definition!",
    ],
    [
      "🏭 - Initializing the APP_CONFIG service.",
    ],
    [
      "👣 - Logging service initialized.",
    ],
    [
      "💱 - HTTP Transaction initialized.",
    ],
    [
      "💾 - Trying to load .env file at "/home/whoami/projects/.env.app.local".",
    ],
    [
      "💾 - Trying to load .env file at "/home/whoami/projects/.env.node.test".",
    ],
    [
      "💿 - Loading "API" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/API.ts".",
    ],
    [
      "💿 - Loading "FILTER_API_TAGS" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts".",
    ],
    [
      "💿 - Loading "MECHANISMS" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.ts".",
    ],
    [
      "💿 - Loading "QUERY_PARSER" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/QUERY_PARSER.ts".",
    ],
    [
      "💿 - Loading "authentication" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/authentication.ts".",
    ],
    [
      "💿 - Loading "getDelayWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.ts".",
    ],
    [
      "💿 - Loading "getDiagnosticWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.ts".",
    ],
    [
      "💿 - Loading "getOpenAPIWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.ts".",
    ],
    [
      "💿 - Loading "getParametersWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getParameters.ts".",
    ],
    [
      "💿 - Loading "getPingWrapped" initializer from "/home/whoiam/projects/whook/dist/handlers/getPing.js".",
    ],
    [
      "💿 - Loading "getTimeWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.ts".",
    ],
    [
      "💿 - Loading "jwtToken" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/services/jwtToken.ts".",
    ],
    [
      "💿 - Loading "optionsWithCORSWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js".",
    ],
    [
      "💿 - Loading "putEchoWrapped" initializer from "/home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.ts".",
    ],
    [
      "💿 - Service "API" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/API.ts".",
    ],
    [
      "💿 - Service "FILTER_API_TAGS" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts".",
    ],
    [
      "💿 - Service "MECHANISMS" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.ts".",
    ],
    [
      "💿 - Service "QUERY_PARSER" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/QUERY_PARSER.ts".",
    ],
    [
      "💿 - Service "authentication" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/authentication.ts".",
    ],
    [
      "💿 - Service "getDelayWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.ts".",
    ],
    [
      "💿 - Service "getDiagnosticWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.ts".",
    ],
    [
      "💿 - Service "getOpenAPIWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.ts".",
    ],
    [
      "💿 - Service "getParametersWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getParameters.ts".",
    ],
    [
      "💿 - Service "getPingWrapped" found in "/home/whoiam/projects/whook/dist/handlers/getPing.js".",
    ],
    [
      "💿 - Service "getTimeWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.ts".",
    ],
    [
      "💿 - Service "jwtToken" found in "/home/whoiam/projects/whook/packages/whook-example/src/services/jwtToken.ts".",
    ],
    [
      "💿 - Service "optionsWithCORSWrapped" found in "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js".",
    ],
    [
      "💿 - Service "putEchoWrapped" found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.ts".",
    ],
    [
      "📇 - Process service initialized.",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getDelay".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getDiagnostic".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getOpenAPI".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getParameters".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getPing".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "getTime".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "optionsWithCORS".",
    ],
    [
      "🔐 - Initializing the authorization wrapper for "putEcho".",
    ],
    [
      "🔧 - Initializing auth mechanisms",
    ],
    [
      "🕶️ - Initializing the obfuscator service.",
    ],
    [
      "🚦 - HTTP Router initialized.",
    ],
    [
      "🚫 - No file found at "/home/whoami/projects/.env.app.local".",
    ],
    [
      "🚫 - No file found at "/home/whoami/projects/.env.node.test".",
    ],
    [
      "🚫 - Service "BUFFER_LIMIT" not found in "/home/whoiam/projects/whook/dist/services/BUFFER_LIMIT".",
    ],
    [
      "🚫 - Service "BUFFER_LIMIT" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/BUFFER_LIMIT".",
    ],
    [
      "🚫 - Service "BUFFER_LIMIT" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/BUFFER_LIMIT".",
    ],
    [
      "🚫 - Service "DECODERS" not found in "/home/whoiam/projects/whook/dist/services/DECODERS".",
    ],
    [
      "🚫 - Service "DECODERS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/DECODERS".",
    ],
    [
      "🚫 - Service "DECODERS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/DECODERS".",
    ],
    [
      "🚫 - Service "DEFAULT_ERROR_CODE" not found in "/home/whoiam/projects/whook/dist/services/DEFAULT_ERROR_CODE".",
    ],
    [
      "🚫 - Service "DEFAULT_ERROR_CODE" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/DEFAULT_ERROR_CODE".",
    ],
    [
      "🚫 - Service "DEFAULT_ERROR_CODE" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/DEFAULT_ERROR_CODE".",
    ],
    [
      "🚫 - Service "ENCODERS" not found in "/home/whoiam/projects/whook/dist/services/ENCODERS".",
    ],
    [
      "🚫 - Service "ENCODERS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/ENCODERS".",
    ],
    [
      "🚫 - Service "ENCODERS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/ENCODERS".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_PREFIXES" not found in "/home/whoiam/projects/whook/dist/services/IGNORED_FILES_PREFIXES".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_PREFIXES" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/IGNORED_FILES_PREFIXES".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_PREFIXES" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/IGNORED_FILES_PREFIXES".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/dist/services/IGNORED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/IGNORED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "IGNORED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/IGNORED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "JWT_SECRET_ENV_NAME" not found in "/home/whoiam/projects/whook/dist/services/JWT_SECRET_ENV_NAME".",
    ],
    [
      "🚫 - Service "JWT_SECRET_ENV_NAME" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/JWT_SECRET_ENV_NAME".",
    ],
    [
      "🚫 - Service "JWT_SECRET_ENV_NAME" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/JWT_SECRET_ENV_NAME".",
    ],
    [
      "🚫 - Service "KEEP_ALIVE_TIMEOUT" not found in "/home/whoiam/projects/whook/dist/services/KEEP_ALIVE_TIMEOUT".",
    ],
    [
      "🚫 - Service "KEEP_ALIVE_TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/KEEP_ALIVE_TIMEOUT".",
    ],
    [
      "🚫 - Service "KEEP_ALIVE_TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/KEEP_ALIVE_TIMEOUT".",
    ],
    [
      "🚫 - Service "MAX_CLEAR_RATIO" not found in "/home/whoiam/projects/whook/dist/services/MAX_CLEAR_RATIO".",
    ],
    [
      "🚫 - Service "MAX_CLEAR_RATIO" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/MAX_CLEAR_RATIO".",
    ],
    [
      "🚫 - Service "MAX_CLEAR_RATIO" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/MAX_CLEAR_RATIO".",
    ],
    [
      "🚫 - Service "MAX_CONNECTIONS" not found in "/home/whoiam/projects/whook/dist/services/MAX_CONNECTIONS".",
    ],
    [
      "🚫 - Service "MAX_CONNECTIONS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/MAX_CONNECTIONS".",
    ],
    [
      "🚫 - Service "MAX_CONNECTIONS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/MAX_CONNECTIONS".",
    ],
    [
      "🚫 - Service "MAX_HEADERS_COUNT" not found in "/home/whoiam/projects/whook/dist/services/MAX_HEADERS_COUNT".",
    ],
    [
      "🚫 - Service "MAX_HEADERS_COUNT" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/MAX_HEADERS_COUNT".",
    ],
    [
      "🚫 - Service "MAX_HEADERS_COUNT" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/MAX_HEADERS_COUNT".",
    ],
    [
      "🚫 - Service "PARSERS" not found in "/home/whoiam/projects/whook/dist/services/PARSERS".",
    ],
    [
      "🚫 - Service "PARSERS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/PARSERS".",
    ],
    [
      "🚫 - Service "PARSERS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/PARSERS".",
    ],
    [
      "🚫 - Service "PROCESS_NAME" not found in "/home/whoiam/projects/whook/dist/services/PROCESS_NAME".",
    ],
    [
      "🚫 - Service "PROCESS_NAME" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/PROCESS_NAME".",
    ],
    [
      "🚫 - Service "PROCESS_NAME" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/PROCESS_NAME".",
    ],
    [
      "🚫 - Service "REDUCED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/dist/services/REDUCED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "REDUCED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/REDUCED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "REDUCED_FILES_SUFFIXES" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/REDUCED_FILES_SUFFIXES".",
    ],
    [
      "🚫 - Service "SHIELD_CHAR" not found in "/home/whoiam/projects/whook/dist/services/SHIELD_CHAR".",
    ],
    [
      "🚫 - Service "SHIELD_CHAR" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/SHIELD_CHAR".",
    ],
    [
      "🚫 - Service "SHIELD_CHAR" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/SHIELD_CHAR".",
    ],
    [
      "🚫 - Service "SIGNALS" not found in "/home/whoiam/projects/whook/dist/services/SIGNALS".",
    ],
    [
      "🚫 - Service "SIGNALS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/SIGNALS".",
    ],
    [
      "🚫 - Service "SIGNALS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/SIGNALS".",
    ],
    [
      "🚫 - Service "SOCKET_TIMEOUT" not found in "/home/whoiam/projects/whook/dist/services/SOCKET_TIMEOUT".",
    ],
    [
      "🚫 - Service "SOCKET_TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/SOCKET_TIMEOUT".",
    ],
    [
      "🚫 - Service "SOCKET_TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/SOCKET_TIMEOUT".",
    ],
    [
      "🚫 - Service "STRINGIFYERS" not found in "/home/whoiam/projects/whook/dist/services/STRINGIFYERS".",
    ],
    [
      "🚫 - Service "STRINGIFYERS" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/STRINGIFYERS".",
    ],
    [
      "🚫 - Service "STRINGIFYERS" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/STRINGIFYERS".",
    ],
    [
      "🚫 - Service "TIMEOUT" not found in "/home/whoiam/projects/whook/dist/services/TIMEOUT".",
    ],
    [
      "🚫 - Service "TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/TIMEOUT".",
    ],
    [
      "🚫 - Service "TIMEOUT" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/TIMEOUT".",
    ],
    [
      "🚫 - Service "getPingWrapped" not found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getPing".",
    ],
    [
      "🚫 - Service "optionsWithCORSWrapped" not found in "/home/whoiam/projects/whook/dist/handlers/optionsWithCORS".",
    ],
    [
      "🚫 - Service "optionsWithCORSWrapped" not found in "/home/whoiam/projects/whook/packages/whook-example/src/handlers/optionsWithCORS".",
    ],
    [
      "🚫 - Service "readDir" not found in "/home/whoiam/projects/whook/dist/services/readDir".",
    ],
    [
      "🚫 - Service "readDir" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/readDir".",
    ],
    [
      "🚫 - Service "readDir" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/readDir".",
    ],
    [
      "🚫 - Service "readFile" not found in "/home/whoiam/projects/whook/dist/services/readFile".",
    ],
    [
      "🚫 - Service "readFile" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/readFile".",
    ],
    [
      "🚫 - Service "readFile" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/readFile".",
    ],
    [
      "🚫 - Service "uniqueId" not found in "/home/whoiam/projects/whook/dist/services/uniqueId".",
    ],
    [
      "🚫 - Service "uniqueId" not found in "/home/whoiam/projects/whook/packages/whook-cors/dist/services/uniqueId".",
    ],
    [
      "🚫 - Service "uniqueId" not found in "/home/whoiam/projects/whook/packages/whook-example/src/services/uniqueId".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/dist/handlers/getPing.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/dist/handlers/getPing.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/config/local/config.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getParameters.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getParameters.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.js".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/API.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/QUERY_PARSER.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/authentication.ts".",
    ],
    [
      "🛂 - Dynamic import of "/home/whoiam/projects/whook/packages/whook-example/src/services/jwtToken.ts".",
    ],
    [
      "🛂 - Dynamic import of "ecstatic".",
    ],
    [
      "🛂 - Dynamic import of "swagger-ui-dist".",
    ],
    [
      "🛂 - Initializing the importer!",
    ],
    [
      "🛂 - Initializing the resolve service!",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/dist/handlers/getPing.js".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-cors/dist/handlers/optionsWithCORS.js".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDelay.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getDiagnostic.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getOpenAPI.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getParameters.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/getTime.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/handlers/putEcho.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/API.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/FILTER_API_TAGS.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/MECHANISMS.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/QUERY_PARSER.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/authentication.ts".",
    ],
    [
      "🛂 - Resolving "/home/whoiam/projects/whook/packages/whook-example/src/services/jwtToken.ts".",
    ],
    [
      "🛂 - Resolving "@whook/cors" to "/home/whoiam/projects/whook/packages/whook-cors/dist/index.js".",
    ],
    [
      "🛂 - Resolving "@whook/whook" to "/home/whoiam/projects/whook/dist/index.js".",
    ],
    [
      "🤖 - Initializing the \`$autoload\` service.",
    ],
    [
      "🦄 - Initializing the API service!",
    ],
  ],
  "logErrorCalls": [
    [
      "On air 🚀🌕",
    ],
    [
      "⚠️ - Using fake auth mechanism!",
    ],
    [
      "⚡ - Loading configurations from "/home/whoiam/projects/whook/packages/whook-example/src/config/local/config.js".",
    ],
    [
      "🎙️ - HTTP Server listening at "http://localhost:9999".",
    ],
    [
      "💁 - Serving the API docs: http://localhost:9999/docs",
    ],
    [
      "🔂 - Running with "local" application environment.",
    ],
    [
      "🔂 - Running with "test" node environment.",
    ],
    [
      "🖥 - Using an isolated env.",
    ],
  ],
  "logInfoCalls": [
    [
      "🔒 - JWT service initialized!",
    ],
    [
      "🕱 -Wrapping the error handler for CORS.",
    ],
  ],
}
`;
